# CodeSummaryAgent

./: .gitignore  README.md  compare_apis.py  config.yaml  main.py  pyproject.toml  requirements.txt  test_latest.py
src/: __init__.py
src/api/: __init__.py  routes.py  server.py  websocket.py
src/cli/: __init__.py  commands.py
src/core/: analyzer.py  document_generator.py  level_processor.py
src/models/: config.py  file_node.py
src/services/: checkpoint.py  dependency.py  directory_scanner.py  incremental.py  llm_queue.py  llm_service.py
src/utils/: api_format.py  logger.py  progress_manager.py  retry.py  tree_printer.py
web/: index.html  package.json  vite.config.js
web/src/: App.vue  router.js  style.css
web/src/api/: index.js
web/src/components/: DependencyGraph.vue  FileTree.vue  ProgressBar.vue  TaskCard.vue
web/src/stores/: analysis.js
web/src/views/: HomeView.vue  TaskDetailView.vue  TasksView.vue
